tests/cases/match/ok/runtime-owned-enum-uniform-payload-slot-move.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

enum EitherOwned {
  Left(own i64),
  Right(own i64),
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn choose(flag: bool) -> EitherOwned {
  if flag {
    return Left(make_owned(11));
  }
  return Right(make_owned(31));
}

fn consume_param(item: EitherOwned) -> i64 {
  let token = item.0;
  drop token;
  return 19;
}

fn consume_local(flag: bool) -> i64 {
  let item: EitherOwned = choose(flag);
  let token = item.0;
  drop token;
  return 23;
}

fn main() -> i64 {
  return consume_param(choose(false)) + consume_local(true);
}
