tests/cases/match/errors/enum-constructor-payload-type.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let value = Some(true);
  return 0;
}
